tests/negative/traits/method_not_in_empty_trait.orng
// method_not_in_empty_trait.orng:8:7: error: method `f` is not in trait `My_Trait`
//     fn f() -> () { }
//      ^
// 
trait My_Trait { }

impl My_Trait for Int {
    fn f() -> () { }
}

fn main() -> Int {
    4
}